# mpe-transcribe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: transcribe.desktop  transcribe.service
docs/: LINUX.md  MAC.md  WINDOWS.md
scripts/: install.sh  install_macos.sh  transcribe_launcher.c  uninstall.sh  uninstall_macos.sh
src/transcribe/: __main__.py  app.py  clipboard.py  clipboard_content.py  config.py  device_check.py  factory.py  hotkey.py  macos_clipboard.py  macos_hotkey.py  macos_notifier.py  macos_permissions.py  macos_transcriber.py  notifier.py  recorder.py  session.py  signal_hotkey.py  transcriber.py  wayland_clipboard.py  wayland_hotkey.py  windows_clipboard.py  windows_hotkey.py  windows_notifier.py  windows_transcriber.py
tests/: conftest.py  test_app.py  test_clipboard.py  test_clipboard_content.py  test_config.py  test_device_check.py  test_factory.py  test_hotkey.py  test_macos_clipboard.py  test_macos_hotkey.py  test_macos_notifier.py  test_macos_permissions.py  test_macos_transcriber.py  test_notifier.py  test_recorder.py  test_session.py  test_transcriber.py  test_wayland_clipboard.py  test_wayland_hotkey.py  test_windows_clipboard.py  test_windows_hotkey.py  test_windows_notifier.py  test_windows_transcriber.py
