[project]
name = "transcribe"
version = "1.4.0"
description = "Voice transcription app with global hotkey — supports Linux, macOS, and Windows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sounddevice",
    "soundfile",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
linux = [
    "nemo_toolkit[asr]",
    "python-xlib",
    "evdev",
]
macos = [
    "mlx-whisper",
    "pynput",
]
windows = [
    "nemo_toolkit[asr]",
    "pynput",
]

[project.scripts]
transcribe = "transcribe.app:main"

[tool.commitizen]
version = "1.4.0"
version_files = [
    "__version__.py",
    "pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe"]

[tool.transcribe]
# Linux model choices (requires NVIDIA GPU with CUDA):
#   "nvidia/parakeet-tdt-0.6b-v3"   - fast, lightweight (~2GB VRAM, default on Linux)
#   "nvidia/parakeet-rnnt-1.1b"     - slower, higher accuracy (~4GB VRAM)
#
# macOS model choices (Apple Silicon M1/M2/M3/M4, uses Metal via MLX):
#   "mlx-community/whisper-large-v3-turbo" - best accuracy/speed (~1.4GB, default on macOS)
#   "mlx-community/whisper-small"          - faster startup, lower accuracy (~488MB)
#   "mlx-community/whisper-base"           - fastest, lowest accuracy (~142MB)
#
# Windows model choices (requires NVIDIA GPU with CUDA):
#   "nvidia/parakeet-tdt-0.6b-v3"   - fast, lightweight (~2GB VRAM, default on Windows)
#   "nvidia/parakeet-rnnt-1.1b"     - slower, higher accuracy (~4GB VRAM)
#
# The default model is selected automatically based on your platform.
# Uncomment one of the lines below to override:
# model = "nvidia/parakeet-tdt-0.6b-v3"
# model = "mlx-community/whisper-large-v3-turbo"

# Hotkey as modifier+key string. Modifiers: ctrl, shift, alt, super
# Key: any single character or key name
# Default: "ctrl+shift+;" on Linux/Windows, "super+shift+'" on macOS (Cmd+Shift+')
# hotkey = "ctrl+shift+;"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "pre-commit",
]
